# GameServicesSample

./: CMakeLists.txt  README.md  linux_main.cpp  view_generator.py  win_main.cpp
event_bus/: event_bus.cpp  event_bus.h  listener.cpp  listener.h
os/: utils.h
services_connector/: connector.cpp  connector.h  friends_service.cpp  friends_service.h  login_service.cpp  login_service.h  logs_service.cpp  logs_service.h  messages_connector.cpp  messages_connector.h
services_connector/services_models/: auth_cache.h  login_model.h
ui_models/: friends_model.h  login_model.h  logs_model.cpp  logs_model.h  main_model.h  message_model.h  profile_model.h
views/: friends_view.cpp  friends_view.h  login_view.cpp  login_view.h  logs_view.cpp  logs_view.h  main_view.cpp  main_view.h  message_view.cpp  message_view.h  profile_view.cpp  profile_view.h  window.h
